@@ -53,12 +53,12 @@ our %S = (%S,
   prod_relations  => {
     'old' => [ 0, 'new' ],
     'new' => [ 1, 'old' ],
-    'sub' => [ 2, 'par' ],
-    'par' => [ 3, 'sub' ],
-    'imp' => [ 4, 'ipa' ],
-    'ipa' => [ 5, 'imp' ],
-    'spa' => [ 6, 'ori' ],
-    'ori' => [ 7, 'spa' ],
+    'spa' => [ 2, 'ori' ],
+    'ori' => [ 3, 'spa' ],
+    'sub' => [ 4, 'par' ],
+    'par' => [ 5, 'sub' ],
+    'imp' => [ 6, 'ipa' ],
+    'ipa' => [ 7, 'imp' ],
   },
   age_ratings     => [undef, 0, 6..18],
   release_types   => [qw|complete partial trial|],
