@@ -12,6 +12,7 @@
 	- Bugfix: only redirect VN search to VN page if page=1
 	- Bugfix: remove duplicate votes when merging tags (fixes a 500)
 	- Bugfix: Multi::Anime: don't crash when anidb returns an invalid or empty year
+	- Bugfix: properly order the relations listed on producer pages
 
 2.11 - 2010-02-06
 	- Added Slovak to the language list
